<resources>
    <string name="app_name">NavigationComponent Example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="header_login_screen">Login Screen</string>
    <string name="hint_password">Password</string>
    <string name="button_text_login">Login</string>
    <string name="text_new_register_here">New? Register Here!</string>
    <string name="header_reg_screen">Registration</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="button_text_register">Register</string>
    <string name="error_username">Username required</string>
    <string name="error_password">Password required</string>
    <string name="error_email">Email require</string>
    <string name="menu_text_logout">Logout</string>
    <string name="menu_text_dashboard">Dashboard</string>
    <string name="menu_text_contact">Contact</string>
    <string name="menu_text_profile">Profile</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="header_profile_screen">Profile</string>
    <string name="header_contact_screen">Contact</string>
    <string name="contact_text_email">dhruv.mail4work@gmai.com</string>
    <string name="contact_text_phone">9876543210</string>
</resources>